--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ url: "afranower.github.io" #custom url to be used instead of GitHub repository
 email: "afra.nower@gmail.com"#
 
 # Pagination
-paginate: 0
-permalink: /blog/:year/:title/
-paginate_path: /blog/page:num/
+paginate: 1
+#permalink: /blog/:year/:title/
+#paginate_path: /blog/page:num/
 
 # Social media links in footer
 twitter: "#"
