--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ paginate: 1
 
 # Social media links in footer
 #twitter: "#"
-linkedin: "#"
+linkedin: "www.linkedin.com/in/afranower"
 #stackoverflow: "#"
 #github: "#"
 #researchgate: "#"
